--- a/source.css
+++ b/source.css
@@ -10,12 +10,12 @@ $$ |  $$ |$$ |      $$ |  $$ |$$ |  $$ |$$ |  $$ |$$ |      $$\   $$ |
 */
 :root {
 	/*Global variables that were made/edited by me*/
-	--Main-Color: rgb(250, 0, 158); /*main master color*/
-	--Secondary-Color: rgb(170, 0, 158); /*secondary color*/
-	--Third-Color: rgb(110,0,158); /*third color*/
-	--Color-4: rgb(90,0,158); /*color number 4*/
-	--Color-5: hsla(320, 40%, 40%, 0.366); /*color number 5*/
-	--Color-6: hsla(320, 50%, 50%, 0.466); /*color number 6*/
+	--Main-Color: rgb(167, 88, 78); /*main master color*/
+	--Secondary-Color: rgb(73, 102, 66); /*secondary color*/
+	--Third-Color: rgb(197, 218, 189); /*third color*/
+	--Color-4: rgb(211, 201, 60); /*color number 4*/
+	--Color-5: hsla(180, 54%, 48%, 0.366); /*color number 5*/
+	--Color-6: hsla(78, 60%, 39%, 0.466); /*color number 6*/
 	--Grey-Color: rgb(31, 31, 31); /*grey color*/
 	--Black: rgb(0,0,0); /*black color*/
 	--White: rgb(255,255,255); /*white color*/
