Tried to fix it?

--- a/Gojo.theme.css
+++ b/Gojo.theme.css
@@ -1,14 +1,14 @@
 /**
- * @name AnotherEternity 
- * @author nyxy#6415
- * @version ersion V1.0.0
- * @description There is another world, another place that everyone can visit...
+ * @name Nah I'd Discord 
+ * @author JingP1ng
+ * @version V1.0.0
+ * @description Would you win?s
  *
- * @website https://github.com/xy-nyxy/
- * @source https://github.com/xy-nyxy/AnotherEternity/blob/main/source.css
+ * @website https://github.com/i-Kia/
+ * @source https://github.com/i-Kia/gojo-theme/
  
 **/
-/*Source AnotherEternity*/
+/*Source GojoTheme*/
 @import url('https://github.com/i-Kia/gojo-theme/blob/main/source.css');
 /*Radial status*/
 @import url('https://discordstyles.github.io/RadialStatus/dist/RadialStatus.css');
