--- a/source.css
+++ b/source.css
@@ -30,11 +30,11 @@ $$ |  $$ |$$ |      $$ |  $$ |$$ |  $$ |$$ |  $$ |$$ |      $$\   $$ |
 	--master-background: url('https://github.com/i-Kia/gojo-theme/blob/main/background/Master%20Background.png?raw=true'); /*master background*/
 	--background-floating: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.2)) , var(--master-background)50% 50%/cover !important; /*background used in normal discord's code*/
 	/*Gifs for popouts and stuff*/
-	--loop-gif: url('https://github.com/xy-nyxy/AnotherEternity/blob/main/background/loop-gif.gif?raw=true'); /*Used in files background*/
-	--loop-gif2: url('https://github.com/xy-nyxy/AnotherEternity/blob/main/background/loop-gif2.gif?raw=true'); /*Used in guild popouts > User popout*/
-	--loop-gif3: url('https://github.com/xy-nyxy/AnotherEternity/blob/main/background/loop-gif3.gif?raw=true'); /*Used in guild popouts > Mentioned card*/
-	--loop-gif-diamond: url('https://github.com/xy-nyxy/AnotherEternity/blob/main/background/loop-gif-diamond.gif?raw=true'); /*Used on home icon*/
-	--logo-photo: url('https://raw.githubusercontent.com/xy-nyxy/AnotherEternity/main/background/Wumpus%20Pink.gif'); /*Used in Friends tab when no friends are online*/
+	--loop-gif: url('https://github.com/i-Kia/gojo-theme/blob/main/background/loop-gif.gif?raw=true'); /*Used in files background*/
+	--loop-gif2: url('https://github.com/i-Kia/gojo-theme/blob/main/background/loop-gif2.gif?raw=true'); /*Used in guild popouts > User popout*/
+	--loop-gif3: url('https://github.com/i-Kia/gojo-theme/blob/main/background/loop-gif3.gif?raw=true'); /*Used in guild popouts > Mentioned card*/
+	--loop-gif-diamond: url('https://github.com/i-Kia/gojo-theme/blob/main/background/loop-gif-diamond.gif?raw=true'); /*Used on home icon*/
+	--logo-photo: url('https://raw.githubusercontent.com/i-Kia/gojo-theme/main/background/Wumpus%20Pink.gif'); /*Used in Friends tab when no friends are online*/
 	/*Borders*/
 	--border1: 2px solid var(--Secondary-Color); /*master border*/
 	--border2: 2px solid var(--Third-Color); /*border 2*/
@@ -207,7 +207,7 @@ $$ |  $$ |$$ |      $$ |  $$ |$$ |  $$ |$$ |  $$ |$$ |      $$\   $$ |
   \__/     \__|\__|  \__|   \__|   \________|\__|  \__|\__|     \__|\__|  \__|\__|  \__|\__|  \__|
   */
   div[class*="typeWindows-"]::after {
-	content: '🔮ANOTHER ETERNITY🔮 v1.1.3';
+	content: 'Nah I\' Discord v1.1.3';
 	font-weight: bold;
 	font-size: 14px;
 	line-height: 30px;
