Made it websited

--- a/Gojo.theme.css
+++ b/Gojo.theme.css
@@ -9,7 +9,7 @@
  
 **/
 /*Source GojoTheme*/
-@import url('https://github.com/i-Kia/gojo-theme/blob/main/source.css');
+@import url('https://i-kia.github.io/gojo-theme.github.io/source.css');
 /*Radial status*/
 @import url('https://discordstyles.github.io/RadialStatus/dist/RadialStatus.css');
 /*BD Addon Mini List by Disease#3749*/
