--- a/source.css
+++ b/source.css
@@ -13,8 +13,8 @@ $$ |  $$ |$$ |      $$ |  $$ |$$ |  $$ |$$ |  $$ |$$ |      $$\   $$ |
 	--Main-Color: rgb(155, 198, 207); /*main master color*/
 	--Secondary-Color: rgb(131, 153, 159); /*secondary color*/
 	--Third-Color: rgb(49, 67, 73); /*third color*/
-	--Color-4: rgb(49, 67, 73); /*color number 4*/
-	--Color-5: rgb(44, 28, 23); /*color number 5*/
+	--Color-4: rgba(131, 153, 159, 0.366); /*color number 4*/
+	--Color-5: rgba(131, 153, 159, 0.366); /*color number 5*/
 	--Color-6: rgb(44, 28, 23) /*color number 6*/
 	--Grey-Color: rgb(14, 17, 17); /*grey color*/
 	--Black: rgb(0,0,0); /*black color*/
